--- a/styles.css
+++ b/styles.css
@@ -48,4 +48,10 @@ ul {
 ul li {
     font-size: 1.3rem;
     margin: 1rem 0;
+    padding-left: 1rem;
+}
+
+ul li label {
+    cursor: pointer;
+    margin-left: 1rem;
 }
